--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -137,8 +137,26 @@
       {Master of Computer Science}{Sep. 2019 -- Aug 2021}
     \resumeSubheading
       {Fr. Concceicao Rodrigues College of Engineering, Univeristy of Mumbai}{Mumbai, MH}
-      {Bachelor of Engineering (Computer Engineering) }{May. 2013 -- May 2016}
+      {Bachelor of Engineering (Computer Engineering) }{Jul. 2013 -- May 2016}
+    \resumeSubheading
+      {Babasaheb Gawde Institute of Technology, MSBTE }{Mumbai, MH}
+      {Diploma in Computer Technoloy}{Jun. 2010 -- May 2013}
   \resumeSubHeadingListEnd
+
+
+%
+%-----------PROGRAMMING SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{ --- C/C++, Pro*C, Java, Racket, Python, R, \LaTeX{}, WebAssembly, JavaScript, HTML/CSS, SQL} \\
+     %%\textbf{Web Technologies}{:,} \\
+     %%\textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
+     \textbf{Developer Tools}{ --- Git, Docker, GitLab CI/CD, VSCode, CMake, GDB, Putty, Eclipse, PL/SQL Developer, R Studio} \\
+     %%\textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Methodologies}{ --- OOPS, UML, SDLC - Incremental Model, Agile Model - SCRUM and Extreme Programming.}
+    }}
+ \end{itemize}
 
 
 %-----------EXPERIENCE-----------
@@ -218,20 +236,6 @@
 
 %
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{ --- C/C++, Pro*C, Java, Racket, Python, R, \LaTeX{}, WebAssembly, JavaScript, HTML/CSS, SQL} \\
-     %%\textbf{Web Technologies}{:,} \\
-     %%\textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{ --- Git, Docker, GitLab CI/CD, VSCode, CMake, GDB, Putty, Eclipse, PL/SQL Developer, R Studio} \\
-     %%\textbf{Libraries}{: pandas, NumPy, Matplotlib}
-     \textbf{Methodologies}{ --- OOPS, UML, SDLC - Incremental Model, Agile Model - SCRUM and Extreme Programming.}
-    }}
- \end{itemize}
-
-%
-%-----------PROGRAMMING SKILLS-----------
 \section{Awards \& Achievements}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
@@ -254,7 +258,7 @@
 \section{Publications}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-      \href{https://dl.acm.org/doi/abs/10.5555/3432601.3432624}{\underline{{An ELF-based storage option for the eclipse OMR ahead-of-time compiler.}}}{ In Proceedings of the 30th Annual International Conference on Computer Science and Software Engineering (CASCON '20). IBM Corp., USA, 173–178.} 
+      \href{https://dl.acm.org/doi/abs/10.5555/3432601.3432624}{\underline{{An ELF-based storage option for the eclipse OMR ahead-of-time compiler,}}}{ In Proceedings of the 30th Annual International Conference on Computer Science and Software Engineering (CASCON '20), ACM Digital Library, IBM Corp., USA, 173–178.} 
      }}
  \end{itemize}
 
