--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -139,8 +139,8 @@
       {Fr. Concceicao Rodrigues College of Engineering, Univeristy of Mumbai}{Mumbai, MH}
       {Bachelor of Engineering (Computer Engineering) }{Jul. 2013 -- May 2016}
     \resumeSubheading
-      {Babasaheb Gawde Institute of Technology, MSBTE }{Mumbai, MH}
-      {Diploma in Computer Technoloy}{Jun. 2010 -- May 2013}
+      {Babasaheb Gawde Institute of Technology, MSBTE, AICTE }{Mumbai, MH}
+      {Diploma in Computer Technology}{Jun. 2010 -- May 2013}
   \resumeSubHeadingListEnd
 
 
