--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -226,7 +226,7 @@
          %   \resumeItem{Predicted the Nominal GDP with 95\%+ accuracy.}
           %\resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Malware Detector} $|$ \emph{Java, Maven, TravisCI, Git}}{Aug 2015 -- May 2016}
+          {\textbf{Malware Detector} $|$ \emph{Java, JSwing, Git}}{Aug 2015 -- May 2016}
           \resumeItemListStart
             \resumeItem{Performed binary analsis on PE-executables and applied a n-gram based approach to finalize a binary feature set.}
             \resumeItem{Applied SVM classification for modelling, which in turn detected all the malicious and benign exe's.}
