--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -228,7 +228,7 @@
       \resumeProjectHeading
           {\textbf{Malware Detector} $|$ \emph{Java, JSwing, Git}}{Aug 2015 -- May 2016}
           \resumeItemListStart
-            \resumeItem{Performed binary analsis on PE-executables and applied a n-gram based approach to finalize a binary feature set.}
+            \resumeItem{Performed binary analysis on PE-executables and applied a n-gram based approach to finalize a binary feature set.}
             \resumeItem{Applied SVM classification for modelling, which in turn detected all the malicious and benign exe's.}
             \resumeItem{Designed and developed a GUI using JApplets/JSwing to automate the training, validation and prediction.}
           \resumeItemListEnd
