--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -124,8 +124,8 @@
 \begin{center}
     \textbf{\Huge \scshape Damian D'monte} \\ \vspace{4pt}
     \small 506-897-2169 $|$ \href{mailto:x@x.com}{\underline{damiandmonte@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/ddmonte}} $|$
-    \href{https://github.com/...}{\underline{github.com/damiandmonte}}
+    \href{https://linkedin.com/in/ddmonte}{\underline{linkedin.com/in/ddmonte}} $|$
+    \href{https://github.com/damiandmonte}{\underline{github.com/damiandmonte}}
 \end{center}
 
 
