--- a/DamianResume.tex
+++ b/DamianResume.tex
@@ -222,7 +222,7 @@
           \resumeItemListStart
             \resumeItem{Researched into cost based optimzers and created a prototype for a DaskDB data science system}
             \resumeItem{Developed a statsGather utility using Python and Pandas to gather different types of database statistics}
-            \resumeItem{Implemented the functionality to generate physical plans from a logical plan and calcuated the cost of each plan.}
+            \resumeItem{Implemented the functionality to generate physical plans from a logical plan and calculated the cost of each plan.}
             %\resumeItem{Performed evaluation using the TPC-H benchmark.}
           \resumeItemListEnd
     %  \resumeProjectHeading
